# michaeldello-embedded

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: README.md  devcontainer.json
.github/workflows/: main-branch-ci.yml  publish-amd64.yml
build-fw/: CMakeCache.txt
common/drivers/uart/: ringbuf.c  ringbuf.h  uart_core.c  uart_core.h
common/include/: gpio_api.h  uart_api.h
common/linker/stm32h5/: stm32h563xx.ld
common/platform/: README.md
common/platform/baremetal/stm32h5/: gpio.c  platform_config.h  register_defs.h  startup_stm32h5.s  uart_hw.c  uart_hw.h
common/platform/include/: gpio_api.h
common/unit_tests/stubs/: gpio_stub.c  gpio_stub.h  uart_hw_stub.c  uart_hw_stub.h
docker/: README.md
docker/common/: Dockerfile
docs/: Doxyfile
projects/blinky/: CMakeLists.txt  README.md  main.c
projects/blinky/app/: blinky.c  blinky.h
projects/blinky/src/: blinky.c  blinky.h
projects/blinky/unit_tests/: CMakeLists.txt  test_blinky.c
projects/uart/: CMakeLists.txt  README.md  main.c
projects/uart/app/: uart_echo.c  uart_echo.h
projects/uart/src/: uart_echo.c  uart_echo.h
projects/uart/unit_tests/: CMakeLists.txt  test_ringbuf.c  test_uart_core.c
toolchains/: arm-gcc.cmake
unit_tests/: CMakeLists.txt  README.md
